# ldr-harambe-mc-rtc

./: .gitignore
src/control/mc_rtc_bridge/: CMakeLists.txt  package.xml
src/control/mc_rtc_bridge/config/: bridge_config.yaml
src/control/mc_rtc_bridge/include/mc_rtc_bridge/: mc_rtc_bridge.hpp
src/control/mc_rtc_bridge/launch/: bridge.launch.py  bridge_real.launch.py
src/control/mc_rtc_bridge/src/: mc_rtc_bridge.cpp  mc_rtc_bridge_node.cpp  mc_rtc_bridge_real.cpp
src/control/mc_rtc_controller/: CMakeLists.txt  README.md  harambe_walking_controller.cpp  harambe_walking_controller.h  mc_com_posture_controller.cpp  mc_com_posture_controller.h  onnx_walking_controller.cpp  onnx_walking_controller.h
src/control/mc_rtc_controller/config/: BaselineWalkingController.yaml  Harambe.yaml  HarambeCoMPosture.yaml  HarambeOnnxWalking.yaml  HarambeWalking.yaml  README_sim_vs_real.md  harambe.json  harambe.rsdf  mc_mujoco.yaml  mc_rtc.yaml
src/control/mc_rtc_controller/scripts/: MUJOCO_LOG.TXT  generate_urdf.sh  install.sh
src/control/mc_rtc_controller/urdf/: harambe_mc_rtc.urdf  harambe_mujoco.xml
